final changes to make it work with jet scaling

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,8 @@ package_dir =
 
 [options.extras_require]
 processor = 
-    CMSJMECalculators @ git+https://gitlab.cern.ch/cms-analysis/general/CMSJMECalculators.git    
+    # CMSJMECalculators @ git+https://gitlab.cern.ch/cms-analysis/general/CMSJMECalculators.git
+	CMSJMECalculators @ git+https://gitlab.cern.ch/mlizzo/CMSJMECalculators.git
 docs =
     sphinx
     numpydoc   
